--- a/Buildspec.yml
+++ b/Buildspec.yml
@@ -1,17 +1,16 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      docker: latest
+
+  pre_build:
+    commands:
+      - sudo service docker start
+      - docker build -t docker-react-app .
+
   build:
     commands:
-      - /usr/bin/docker build -t docker-react-app .
-      - /usr/bin/docker run docker-react-app npm run test
-
-
-
-
-
-
-
-
-
+      - docker run docker-react-app npm run test --coverage
   
