changes in buildspec filesdadf

--- a/Buildspec.yml
+++ b/Buildspec.yml
@@ -2,17 +2,12 @@ version: 0.2
 
 phases:
 
-  install:
-    required-environment:
-      - nodejs:16
-    commands:
-      - npm install -g
   build:
     commands:
       - docker build -t docker-react-app .
 
   post_build:
     commands:
-      - docker run docker-react-app npm run test
+      - docker run -d docker-react-app 
       - docker images
 
